# smtools

./: pyproject.toml
smtools/: __init__.py  app.py  builder.py
smtools/ext/core/: __init__.py  abstract.py  builder.py  factory.py  singleton.py
smtools/ext/services/abalone/pipelines/training/: parameters.py  steps.py
smtools/ext/services/abalone/pipelines/training/code/: preprocessing.py
smtools/ext/services/synthetic_housing/pipelines/: train.py
smtools/ext/services/synthetic_housing/src/train/: preprocessing.py
smtools/ext/settings/: config.py  settings.yaml
smtools/ext/workflows/: training.py
