[tool.poetry]
name = "smtools"
version = "0.1.0"
description = "Sagemaker Pipelines Templates"
authors = ["Ernane Sena"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<4.0"
sagemaker = "^2.116.0"
dynaconf = "^3.1.11"
scikit-learn = "1.0.2"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
